--- a/src/FluentDraft/Views/SettingsWindow.xaml
+++ b/src/FluentDraft/Views/SettingsWindow.xaml
@@ -375,11 +375,19 @@
                                           Margin="0,0,0,15"/>
 
                                 <TextBlock Text="Model" Foreground="#888" Margin="0,0,0,5"/>
-                                <ComboBox IsEditable="True"
-                                          ItemsSource="{Binding SelectedEditingPreset.AvailableModels}"
-                                          Text="{Binding SelectedEditingPreset.Model, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                          Margin="0,0,0,15"
-                                          ToolTip="Select from available models or type custom model name"/>
+                                <Grid Margin="0,0,0,15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <ComboBox Grid.Column="0" IsEditable="True"
+                                              ItemsSource="{Binding SelectedEditingPreset.AvailableModels}"
+                                              Text="{Binding SelectedEditingPreset.Model, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                              Margin="0,0,5,0"
+                                              ToolTip="Select from available models or type custom model name"/>
+                                    <Button Grid.Column="1" Command="{Binding FetchPresetModelsCommand}" CommandParameter="{Binding SelectedEditingPreset}"
+                                            Content="↻" Width="30" Background="#444" Foreground="White" BorderThickness="0" ToolTip="Fetch Models from Provider"/>
+                                </Grid>
 
                                 <TextBlock Text="System Prompt" Foreground="#888" Margin="0,0,0,5"/>
                                 <TextBox Text="{Binding SelectedEditingPreset.SystemPrompt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
